--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@
             <img src = "./data/presentations/May_21_2023/dance_2.png" style="width:200px"/>
         </td>
         <td style="width: 30%;">
-        Travel Group<br>
-        presentation on<br>
-        Argentine Dance Culture<br>
-        by<br>
-        Stefani Hathaway <br>
-        ​and partner <br>
-        ​on May 21, 2023
+        <p>Travel Group  presentation on</p>
+        <p style="color:chocolate">Argentine Dance Culture</p>
+        <p>by Stefani Hathaway ​and partner</p>
+        <p>​on May 21, 2023</p>
 
         </td>
     </tr>
