--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </p>
 
 <hr>
-
+<h2> Future Presentations</h2>
 <table>
     <tr>
         <td style="width: 70%;">
@@ -28,22 +28,75 @@
 </table>
 
 <hr>
+<h2> Past Presentations</h2>
+
+<h3> 2023 &ndash; 2024</h3>
 
 <table>
     <tr>
-        <td style="width: 70%;">
-            <img src = "./data/presentations/May_21_2023/dance.png" style="width:200px"/>
-            <img src = "./data/presentations/May_21_2023/dance_2.png" style="width:200px"/>
-        </td>
-        <td style="width: 30%;">
-        <p>Travel Group  presentation on</p>
-        <p style="color:chocolate">Argentine Dance Culture</p>
-        <p>by Stefani Hathaway ​and partner</p>
-        <p>​on May 21, 2023</p>
-
-        </td>
+        <td width = 20%>May 19, 2024</td>
+        <td> <span style="color:chocolate">Utah Canyons</span> by Joan &amp; Bob Callecod</td>
     </tr>
 </table>
+
+<table>
+    <tr>
+        <td width = 20%>April 28, 2024</td>
+        <td> <span style="color:chocolate">Egypt</span> by Winnie &amp; Bob Rex</td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td width = 20%>March 24, 2024</td>
+        <td> <span style="color:chocolate">Top Secret Russian Town</span> by Dasha &amp; Alexey</td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td width = 20%> February 25, 2024 </td>
+        <td> <span style="color:chocolate"> Canary Islands </span> by  Marilyn Shrude &amp; Sampen </td>
+    </tr>
+</table>
+
+
+<table>
+    <tr>
+        <td width = 20%> January 28, 2024 </td>
+        <td> <span style="color:chocolate"> If Your Friend Offers You Their Yurt on Orcas Island, Say Yes! And Other Stories from Washington State </span> by Guest speakers;  Holly Brians &amp; Damon Ragusa </td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td width = 20%> December 3, 2023 </td>
+        <td> <span style="color:chocolate"> Textile Collecting Adventures in Indonesia (Festive Food for December Holidays) </span> by Sue &amp; Dave Potter </td>
+    </tr>
+</table>
+
+<!-- <table>
+    <tr>
+        <td width = 20%> - </td>
+        <td> <span style="color:chocolate"> - </span> by  - </td>
+    </tr>
+</table> -->
+
+
+<h3> 2023</h3>
+
+<table>
+    <tr>
+        <td width = 10%>May 21</td>
+        <td> <span style="color:chocolate">Argentine Dance Culture</span> by Stefani Hathaway ​and partner</td>
+    </tr>
+</table>
+            <img src = "./data/presentations/May_21_2023/dance.png" style="width:200px"/>
+            <img src = "./data/presentations/May_21_2023/dance_2.png" style="width:200px"/>
+
+
+<hr>
+
 
 
 </body>
