--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <hr>
 <h2> Past Presentations</h2>
 
+
+
 <h3> 2023 &ndash; 2024</h3>
 
 <table>
@@ -38,6 +40,7 @@
         <td> <span style="color:chocolate">Utah Canyons</span> by Joan &amp; Bob Callecod</td>
     </tr>
 </table>
+<br>
 
 <table>
     <tr>
@@ -46,6 +49,7 @@
     </tr>
 </table>
 
+<br>
 <table>
     <tr>
         <td width = 20%>March 24, 2024</td>
@@ -53,6 +57,7 @@
     </tr>
 </table>
 
+<br>
 <table>
     <tr>
         <td width = 20%> February 25, 2024 </td>
@@ -61,13 +66,18 @@
 </table>
 
 
+<br>
 <table>
     <tr>
         <td width = 20%> January 28, 2024 </td>
-        <td> <span style="color:chocolate"> If Your Friend Offers You Their Yurt on Orcas Island, Say Yes! And Other Stories from Washington State </span> by Guest speakers;  Holly Brians &amp; Damon Ragusa </td>
+        <td> <span style="color:chocolate"> If Your Friend Offers You Their Yurt on Orcas Island, Say Yes! And Other Stories from Washington State </span></td>
+        <tr>
+            <td></td>
+            <td>by Guest speakers;  Holly Brians &amp; Damon Ragusa </td>
     </tr>
 </table>
 
+<br>
 <table>
     <tr>
         <td width = 20%> December 3, 2023 </td>
