--- a/index.html
+++ b/index.html
@@ -30,6 +30,72 @@
 <hr>
 <h2> Past Presentations</h2>
 
+<h3> 2024 &ndash; 2025</h3>
+
+<table>
+    <tr>
+        <td width = 20%> May 18, 2025 </td>
+        <td> <span style="color:chocolate"> Charleston </span> by  Susan & George </td>
+    </tr>
+</table>
+
+<br>
+<table>
+    <tr>
+        <td width = 20%> April 27, 2025</td>
+        <td> <span style="color:chocolate"> ?????????? </span> possible presenter pending </td>
+    </tr>
+</table>
+
+<br>
+<table>
+    <tr>
+        <td width = 20%> March 23, 2025 </td>
+        <td> <span style="color:chocolate"> Egypt </span> by  Winnie & Bob Rex </td>
+    </tr>
+</table>
+
+<br>
+<table>
+    <tr>
+        <td width = 20%> February 23, 2025 </td>
+        <td> no presentation </td>
+    </tr>
+</table>
+
+<br>
+<table>
+    <tr>
+        <td width = 20%> January 26, 2025 </td>
+        <td> <span style="color:chocolate"> Mexico tour </span> by  Elayne and Joe Jacoby & Maria Fong </td>
+    </tr>
+</table>
+
+<br>
+<table>
+    <tr>
+        <td width = 20%> November 24, 2024 </td>
+        <td> <span style="color:chocolate"> TBA </span> by  Milt Hakel </td>
+    </tr>
+</table>
+
+<!-- <br>
+<table>
+    <tr>
+        <td width = 20%> - </td>
+        <td> <span style="color:chocolate"> - </span> by  - </td>
+    </tr>
+</table> -->
+
+
+<table>
+    <tr>
+        <td width = 20%> October 27, 2024 </td>
+        <td> <span style="color:chocolate"> Cruising the Bay of Bengal:  From Mumbai to Bangkok  </span> by  Hilde Farrow </td>
+    </tr>
+</table>
+
+
 
 
 <h3> 2023 &ndash; 2024</h3>
@@ -85,12 +151,6 @@
     </tr>
 </table>
 
-<!-- <table>
-    <tr>
-        <td width = 20%> - </td>
-        <td> <span style="color:chocolate"> - </span> by  - </td>
-    </tr>
-</table> -->
 
 
 <h3> 2023</h3>
