--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <h3> 2024 &ndash; 2025</h3>
 
+<div style="margin-left: 5%;">
 <table>
     <tr>
         <td width = 20%> May 18, 2025 </td>
@@ -95,11 +96,12 @@
     </tr>
 </table>
 
-
+</div>
 
 
 <h3> 2023 &ndash; 2024</h3>
 
+<div style="margin-left: 5%;">
 <table>
     <tr>
         <td width = 20%>May 19, 2024</td>
@@ -151,10 +153,11 @@
     </tr>
 </table>
 
-
+</div>
 
 <h3> 2023</h3>
 
+<div style="margin-left: 5%;">
 <table>
     <tr>
         <td width = 10%>May 21</td>
@@ -163,7 +166,7 @@
 </table>
             <img src = "./data/presentations/May_21_2023/dance.png" style="width:200px"/>
             <img src = "./data/presentations/May_21_2023/dance_2.png" style="width:200px"/>
-
+</div>
 
 <hr>
 
