season margin in styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Aleksei Luchinsky</title>
+  <title>UW: Travelers Group</title>
   <link rel="stylesheet" href="./styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
 </head>
@@ -32,7 +32,7 @@
 
 <h3> 2024 &ndash; 2025</h3>
 
-<div style="margin-left: 5%;">
+<div class="season">
 <table>
     <tr>
         <td width = 20%> May 18, 2025 </td>
@@ -77,7 +77,7 @@
     <tr>
         <td width = 20%> November 24, 2024 </td>
         <td> <span style="color:chocolate"> TBA </span> by  Milt Hakel </td>
-    </tr>
+</tr>
 </table>
 
 <!-- <br>
@@ -101,7 +101,7 @@
 
 <h3> 2023 &ndash; 2024</h3>
 
-<div style="margin-left: 5%;">
+<div class="season">
 <table>
     <tr>
         <td width = 20%>May 19, 2024</td>
