--- a/index.html
+++ b/index.html
@@ -15,17 +15,71 @@
 </p>
 
 <hr>
-<h2> Future Presentations</h2>
-<table>
+<h2> Future Presentations (2025 &ndash; 2026)</h2>
+
+<table border="1" cellspacing="0" cellpadding="6">
+  <thead>
     <tr>
-        <td style="width: 70%;">
-            Click <a href="./data/schedules/2023-2024_travelers_group_schedule-3.docx">HERE</a> download 2023-2024 Group Schedule
-        </td>
-        <td style="width: 30%;">
-        <img src = "data/other/baggage.png" style="width:100px"/>
-        </td>
+      <th>Date</th>
+      <th>Hosts</th>
+      <th>Presenters</th>
+      <th>Topic</th>
     </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>28-Sep</td>
+      <td>Joan and Bob Callecod</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>26-Oct</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>23-Nov</td>
+      <td></td>
+      <td>Hilde Farrow</td>
+      <td>Cruise: Bejing to Tokyo</td>
+    </tr>
+    <tr>
+      <td>25-Jan</td>
+      <td>Hakels</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>22-Feb</td>
+      <td>Roger and BettyJean Anderson</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>22-Mar</td>
+      <td>Rick and Akiko Jones</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>26-Apr</td>
+      <td>Betty Yarris</td>
+      <td>Sue and Dave Potter</td>
+      <td>Singapore</td>
+    </tr>
+    <tr>
+      <td>17-May</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
 </table>
+
+<br>
+Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download 2025-2026 Group Schedule
 
 <hr>
 <h2> Past Presentations</h2>
