SNZ presetation added

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </table>
 
 <br>
-Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download 2025-2026 Group Schedule
+Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the Excel file
 
 <hr>
 <h2> Past Presentations</h2>
@@ -185,7 +185,14 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download 202
         <td> <span style="color:chocolate">Top Secret Russian Town</span> by Dasha &amp; Alexey</td>
     </tr>
 </table>
-
+<div class="event">
+    <img src = "./data/presentations/2024_Mar_24/slide_1.png" style="width:40%"/>
+    <img src = "./data/presentations/2024_Mar_24/musical_school.png" style="width:40%"/>
+    <img src = "./data/presentations/2024_Mar_24/Gazibo_summer.png" style="width:40%"/>
+    <img src = "./data/presentations/2024_Mar_24/Gazibo_winter.png" style="width:40%"/>
+<br>
+CLICK <a href="data/presentations/2024_Mar_24/SNZ_presentation.pptx.pdf">here</a> to download the complete presentation
+</div>
 <br>
 <table>
     <tr>
