--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
 </head>
 
+<script>
+  class MeetingEntry extends HTMLElement {
+    connectedCallback() {
+      const date = this.getAttribute('date');
+      const title = this.getAttribute('title');
+      const presenters = this.getAttribute('presenters');
+      this.innerHTML = `
+        <br>
+        <table>
+            <tr>
+                <td width="20%">${date}</td>
+                <td><span style="color:chocolate">${title}</span> ${presenters}</td>
+            </tr>
+        </table>
+      `;
+    }
+  }
+  customElements.define('meeting-entry', MeetingEntry);
+</script>
+
+
 <body>
 
     <h1> Travelers Group </h1>
@@ -87,61 +108,53 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 <h3> 2024 &ndash; 2025</h3>
 
 <div class="season">
-<table>
-    <tr>
-        <td width = 20%> October 27, 2024 </td>
-        <td> <span style="color:chocolate"> Cruising the Bay of Bengal:  From Mumbai to Bangkok  </span> by  Hilde Farrow </td>
-    </tr>
-</table>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%> November 24, 2024 </td>
-        <td> <span style="color:chocolate"> TBA </span> by  Milt Hakel </td>
-</tr>
-</table>
+<meeting-entry
+    date = "October 27, 2024"
+    title = "Cruising the Bay of Bengal:  From Mumbai to Bangkok"
+    presenters = "by  Hilde Farrow"
+>
+</meeting-entry>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%> January 26, 2025 </td>
-        <td> <span style="color:chocolate"> Mexico tour </span> by  Elayne and Joe Jacoby & Maria Fong </td>
-    </tr>
-</table>
+<meeting-entry
+    date = "November 24, 2024"
+    title = "TDA"
+    presenters = "by  Milt Hakel"
+></meeting-entry>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%> February 23, 2025 </td>
-        <td> no presentation </td>
-    </tr>
-</table>
+<meeting-entry 
+  date="January 26, 2025" 
+  title="Mexico tour" 
+  presenters="by Elayne and Joe Jacoby & Maria Fong">
+</meeting-entry>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%> March 23, 2025 </td>
-        <td> <span style="color:chocolate"> Egypt </span> by  Winnie & Bob Rex </td>
-    </tr>
-</table>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%> April 27, 2025</td>
-        <td> <span style="color:chocolate"> ?????????? </span> possible presenter pending </td>
-    </tr>
-</table>
+<meeting-entry
+ date = "February 23, 2025"
+ title = ""
+ presenters = "no presentation"
+>
+</meeting-entry>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%> May 18, 2025 </td>
-        <td> <span style="color:chocolate"> Charleston </span> by  Susan & George </td>
-    </tr>
-</table>
+<meeting-entry
+    date="March 23, 2025"
+    title = "Egypt"
+    presenters = "by Winnie & Bob Rex"
+></meeting-entry>
 
+<meeting-entry
+    date="April 27, 2025"
+    title = ""
+    presenters = "possible presenter pending"
+>
+</meeting-entry>
+
+<meeting-entry
+    date = "May 18, 2025"
+    title = "Charleston"
+    presenters = "by  Susan & George"
+>
+</meeting-entry>
 
 </div>
 
@@ -149,14 +162,12 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 
 <div class="season">
 
-
-<br>
-<table>
-    <tr>
-        <td width = 20%> December 3, 2023 </td>
-        <td> <span style="color:chocolate"> Textile Collecting Adventures in Indonesia (Festive Food for December Holidays) </span> by Sue &amp; Dave Potter </td>
-    </tr>
-</table>
+<meeting-entry
+    date = "December 3, 2023"
+    title = "Textile Collecting Adventures in Indonesia (Festive Food for December Holidays)"
+    presenters = "by Sue &amp; Dave"
+>
+</meeting-entry>
 
 <br>
 <table>
@@ -170,62 +181,59 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
     </tr>
 </table>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%> February 25, 2024 </td>
-        <td> <span style="color:chocolate"> Canary Islands </span> by  Marilyn Shrude &amp; Sampen </td>
-    </tr>
-</table>
+<meeting-entry
+    date="February 25, 2024"
+    title="Canary Islands"
+    presenters="by  Marilyn Shrude &amp; Sampen"
+>
+</meeting-entry>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%>March 24, 2024</td>
-        <td> <span style="color:chocolate">Top Secret Russian Town</span> by Dasha &amp; Alexey</td>
-    </tr>
-</table>
-<div class="event">
-    <img src = "./data/presentations/2024_Mar_24/slide_1.png" style="width:40%"/>
-    <img src = "./data/presentations/2024_Mar_24/musical_school.png" style="width:40%"/>
-    <img src = "./data/presentations/2024_Mar_24/Gazibo_summer.png" style="width:40%"/>
-    <img src = "./data/presentations/2024_Mar_24/Gazibo_winter.png" style="width:40%"/>
-<br>
-CLICK <a href="data/presentations/2024_Mar_24/SNZ_presentation.pptx.pdf">here</a> to download the complete presentation
-</div>
-<br>
-<table>
-    <tr>
-        <td width = 20%>April 28, 2024</td>
-        <td> <span style="color:chocolate">Egypt</span> by Winnie &amp; Bob Rex</td>
-    </tr>
-</table>
+<meeting-entry
+    date="March 24, 2024"
+    title="Top Secret Russian Town"
+    presenters=" by Dasha &amp; Alexey"
+>
+    <div class="event">
+        <img src = "./data/presentations/2024_Mar_24/slide_1.png" style="width:40%"/>
+        <img src = "./data/presentations/2024_Mar_24/musical_school.png" style="width:40%"/>
+        <img src = "./data/presentations/2024_Mar_24/Gazibo_summer.png" style="width:40%"/>
+        <img src = "./data/presentations/2024_Mar_24/Gazibo_winter.png" style="width:40%"/>
+    <br>
+    CLICK <a href="data/presentations/2024_Mar_24/SNZ_presentation.pptx.pdf">here</a> to download the complete presentation
+    </div>
+</meeting-entry>
 
-<br>
-<table>
-    <tr>
-        <td width = 20%>May 19, 2024</td>
-        <td> <span style="color:chocolate">Utah Canyons</span> by Joan &amp; Bob Callecod</td>
-    </tr>
-</table>
+<meeting-entry
+    date="April 28, 2024"
+    title="Egypt"
+    presenters="by Winnie &amp; Bob Rex"
+></meeting-entry>
+
+<meeting-entry
+    date="May 19, 2024"
+    title="Utah Canyons"
+    presenters="by Joan &amp; Bob Callecod"
+></meeting-entry>
 
 </div>
 
 <h3> 2023</h3>
 
-<div style="margin-left: 5%;">
-<table>
-    <tr>
-        <td width = 10%>May 21</td>
-        <td> <span style="color:chocolate">Argentine Dance Culture</span> by Stefani Hathaway ​and partner</td>
-    </tr>
-</table>
-            <img src = "./data/presentations/May_21_2023/dance.png" style="width:200px"/>
-            <img src = "./data/presentations/May_21_2023/dance_2.png" style="width:200px"/>
+<div class="season">
+
+    <meeting-entry
+        date="May 21, 2023"
+        title="Argentine Dance Culture"
+        presenters="by Stefani Hathaway ​and partner"
+    >
+        <div class="event">
+                <img src = "./data/presentations/May_21_2023/dance.png" style="width:200px"/>
+                <img src = "./data/presentations/May_21_2023/dance_2.png" style="width:200px"/>
+        </div>
+    </meeting-entry>
+
 </div>
 
 <hr>
-
-
 
 </body>
