--- a/index.html
+++ b/index.html
@@ -7,25 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
 </head>
 
-<script>
-  class MeetingEntry extends HTMLElement {
-    connectedCallback() {
-      const date = this.getAttribute('date');
-      const title = this.getAttribute('title');
-      const presenters = this.getAttribute('presenters');
-      this.innerHTML = `
-        <br>
-        <table>
-            <tr>
-                <td width="20%">${date}</td>
-                <td><span style="color:chocolate">${title}</span> ${presenters}</td>
-            </tr>
-        </table>
-      `;
-    }
-  }
-  customElements.define('meeting-entry', MeetingEntry);
-</script>
+<script src="scripts.js"></script>
 
 
 <body>
