--- a/index.html
+++ b/index.html
@@ -94,26 +94,27 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 <meeting-entry
     date = "October 27, 2024"
     title = "Cruising the Bay of Bengal:  From Mumbai to Bangkok"
-    presenters = "by  Hilde Farrow"
+    presenters = "Hilde Farrow"
 >
 </meeting-entry>
 
 <meeting-entry
     date = "November 24, 2024"
     title = "TDA"
-    presenters = "by  Milt Hakel"
+    presenters = "Milt Hakel"
 ></meeting-entry>
 
 <meeting-entry 
   date="January 26, 2025" 
   title="Mexico tour" 
-  presenters="by Elayne and Joe Jacoby & Maria Fong">
+  presenters="Elayne and Joe Jacoby & Maria Fong">
 </meeting-entry>
 
 
 <meeting-entry
  date = "February 23, 2025"
  title = ""
+ show_by="no"
  presenters = "no presentation"
 >
 </meeting-entry>
@@ -121,12 +122,13 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 <meeting-entry
     date="March 23, 2025"
     title = "Egypt"
-    presenters = "by Winnie & Bob Rex"
+    presenters = "Winnie & Bob Rex"
 ></meeting-entry>
 
 <meeting-entry
     date="April 27, 2025"
     title = ""
+    show_by="no"
     presenters = "possible presenter pending"
 >
 </meeting-entry>
@@ -134,7 +136,7 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 <meeting-entry
     date = "May 18, 2025"
     title = "Charleston"
-    presenters = "by  Susan & George"
+    presenters = "Susan & George"
 >
 </meeting-entry>
 
@@ -147,7 +149,7 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 <meeting-entry
     date = "December 3, 2023"
     title = "Textile Collecting Adventures in Indonesia (Festive Food for December Holidays)"
-    presenters = "by Sue &amp; Dave"
+    presenters = "Sue &amp; Dave"
 >
 </meeting-entry>
 
@@ -166,14 +168,14 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 <meeting-entry
     date="February 25, 2024"
     title="Canary Islands"
-    presenters="by  Marilyn Shrude &amp; Sampen"
+    presenters="Marilyn Shrude &amp; Sampen"
 >
 </meeting-entry>
 
 <meeting-entry
     date="March 24, 2024"
     title="Top Secret Russian Town"
-    presenters=" by Dasha &amp; Alexey"
+    presenters="Dasha &amp; Alexey"
 >
     <div class="event">
         <img src = "./data/presentations/2024_Mar_24/slide_1.png" style="width:40%"/>
@@ -188,13 +190,13 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 <meeting-entry
     date="April 28, 2024"
     title="Egypt"
-    presenters="by Winnie &amp; Bob Rex"
+    presenters="Winnie &amp; Bob Rex"
 ></meeting-entry>
 
 <meeting-entry
     date="May 19, 2024"
     title="Utah Canyons"
-    presenters="by Joan &amp; Bob Callecod"
+    presenters="Joan &amp; Bob Callecod"
 ></meeting-entry>
 
 </div>
@@ -206,7 +208,7 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
     <meeting-entry
         date="May 21, 2023"
         title="Argentine Dance Culture"
-        presenters="by Stefani Hathaway ​and partner"
+        presenters="Stefani Hathaway ​and partner"
     >
         <div class="event">
                 <img src = "./data/presentations/May_21_2023/dance.png" style="width:200px"/>
