--- a/index.html
+++ b/index.html
@@ -303,34 +303,64 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 
 <textarea id="chat_text" style="width: 100%; height: 200px; padding: 10px;">
 </textarea>
-<button id="send_chat_btn" onclick="sendChat()">Send</button>
-<div id="chat_content"/>
+<button id="send_chat_btn" onclick="sendMessage()">Send</button>
+<div id="chat-box"/>
 
 <script>
-  window.chat_history = []
+    const supabaseUrl = 'https://ooqcydaootqkowkhxhil.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9vcWN5ZGFvb3Rxa293a2h4aGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIwNjI2OTMsImV4cCI6MjA2NzYzODY5M30.NWS0b0alWEj9KAHpHyrcfyQ-2bri571atC0IEVBNeHI';
+    const client_chat = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-  function renderChatArea() {
-    console.log("Rendering Chat Area")
-    const container = document.getElementById("chat_content");
-    let html = "<div>"
-      window.chat_history.forEach(element => {
-        console.log(element)
-        html += `<p><span style="color:red;">${element["author"]}</span> ${element["time"].toLocaleTimeString()}: `
-        html += `${element["content"]}</p>`
-      });
-    html += `<p> ${window.chat_history.length} records`
-    html += "</div>"
-    container.innerHTML = html;
+async function sendMessage() {
+  const author = window.currentUser;
+  const content = document.getElementById("chat_text").value.trim();
 
+  if (!author || !content) return;
+
+  to_insert =     {
+      author: author,
+      content: content,
+      time: new Date().toLocaleTimeString([], {
+        hour: '2-digit',
+        minute: '2-digit',
+        hour12: false
+      })
+    }
+  console.log("inserting ", to_insert)
+
+  await client_chat.from("messages").insert([to_insert]);
+
+  document.getElementById("chat_text").value = "";
+  await loadChatMessages(); // refresh after send
+}
+
+async function loadChatMessages() {
+  console.log("Loading chat messages")
+  const { data, error } = await client_chat
+    .from("messages")
+    .select("*")
+    .order("time", { ascending: true });
+
+  if (error) {
+    console.error("Failed to load messages:", error);
+    return;
   }
 
-  function sendChat() {
-    console.log("sendChat()")
-    txt = document.getElementById("chat_text")
-    now = new Date();
-    window.chat_history.push({author:window.currentUser, time:now, content: txt.value})
-    renderChatArea()
+  const chatBox = document.getElementById("chat-box");
+  const html = data.map(msg => {
+    return(`<div><strong>${msg.author}:</strong> ${msg.content}<br><small>${new Date(msg.time).toLocaleTimeString()}</small></div>`)
   }
+  ).join("");
+  chatBox.innerHTML = html
+
+
+  // auto-scroll to bottom
+  chatBox.scrollTop = chatBox.scrollHeight;
+}
+
+// auto-refresh every 50 seconds
+setInterval(loadChatMessages, 5000);
+document.addEventListener("DOMContentLoaded", loadChatMessages);
 </script>
 
 
