--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@ async function loadChatMessages() {
 
   const chatBox = document.getElementById("chat-box");
   const html = data.map(msg => {
-    return(`<div><strong>${msg.author}:</strong> ${msg.content}<br><small>${new Date(msg.time).toLocaleTimeString()}</small></div>`)
+    console.log(msg)
+    return(`<div><strong>${msg.author}</strong>:<small>${msg.time}</small><br> ${msg.content}</div>`)
   }
   ).join("");
   chatBox.innerHTML = html
