js code moved to separate files

--- a/index.html
+++ b/index.html
@@ -8,133 +8,10 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
 
-<!-- <script src="scripts.js"></script> -->
-
-<script>
-    class MeetingEntry extends HTMLElement {
-    connectedCallback() {
-      const date = this.getAttribute('date');
-      const title = this.getAttribute('title');
-      var presenters = this.getAttribute('presenters');
-      const show_by = this.getAttribute("show_by")
-      if(show_by !="no" && show_by != false) {
-        presenters = "by " + presenters
-      }
-        this.innerHTML = `
-        <br>
-        <table>
-            <tr>
-            <td width="20%">${date}</td>
-            <td>
-                ${title ? `<span style="color:chocolate">&laquo;${title}&raquo;</span> ` : ''}
-                ${presenters}
-            </td>
-            </tr>
-        </table>
-        `;
-    }
-  }
-  customElements.define('meeting-entry', MeetingEntry);
-
-
-function renderScheduleTable(data) {
-  console.log("Rendering Schedule table")
-  const container = document.getElementById("schedule-table");
-
-  let html = '<table border="1" cellpadding="5" cellspacing="0">';
-  html += '<thead><tr><th>Date</th><th>Hosts</th><th>Presenters</th><th>Topic</th></tr></thead><tbody>';
-
-  data.forEach((entry, rowIndex) => {
-    html += '<tr>';
-
-    ['Date', 'Hosts', 'Presenters', 'Topic'].forEach((key) => {
-      const value = entry[key] || '';
-      const style = value.trim().startsWith('(') ? 'style="background-color: #ffcccc;"' : '';
-
-      html += `<td ${style} ondblclick="handleCellDoubleClick('${key}', ${rowIndex})">
-        ${value}
-      </td>`;
-    });
-
-    html += '</tr>';
-  });
-
-  html += '</tbody></table>';
-  container.innerHTML = html;
-}
-
-async function loadSchedule() {
-    const supabaseUrl = 'https://ooqcydaootqkowkhxhil.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9vcWN5ZGFvb3Rxa293a2h4aGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIwNjI2OTMsImV4cCI6MjA2NzYzODY5M30.NWS0b0alWEj9KAHpHyrcfyQ-2bri571atC0IEVBNeHI';
-    const client = window.supabase.createClient(supabaseUrl, supabaseKey);
-    const { data, error } = await client
-      .from('schedule2025')
-      .select('*')
-      .order('Date', { ascending: true });
-
-    if (error) {
-      console.error('Error loading schedule:', error);
-      return;
-    }
-    window.oldData = JSON.parse(JSON.stringify(data));
-    window.schedule_data = JSON.parse(JSON.stringify(data));    console.log("data = ", data)
-    renderScheduleTable(window.schedule_data); // ✅ call render after loading
-}
-
-function handleCellDoubleClick(column, rowIndex) {
-  const value = window.schedule_data[rowIndex][column];
-  // alert(`Double-clicked on: ${column} = "${value}" (row ${rowIndex + 1})`);
-  const currentValue = window.schedule_data[rowIndex][column]
-  var new_value = prompt(`Edit ${column}:`, currentValue)
-  if(new_value == null) {
-    new_value = ""
-  }
-  new_value = "(" + new_value + ")"
-  window.schedule_data[rowIndex][column] = new_value
-  // Optional: add editing logic here later
-  renderScheduleTable(window.schedule_data);
-}
-</script>
-
-
+<script src="./js/scripts.js"></script>
 
 <body>
 
-<script>
-  function openPage(evt, tabName) {
-  var i, tabcontent, tablinks;
-  console.log("openPage called with tabName: " + tabName);
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].classList.remove("active");
-  }
-  var tab = document.getElementById(tabName);
-  if (tab) {
-    tab.style.display = "block";
-  }
-  if (evt) {
-    evt.currentTarget.classList.add("active");
-  } else {
-    // Automatically mark the correct button active if evt is null (on load)
-    for (i = 0; i < tablinks.length; i++) {
-      if (tablinks[i].textContent === tabName) {
-        tablinks[i].classList.add("active");
-      }
-    }
-  }
-}
-
-window.onload = function() {
-  const params = new URLSearchParams(window.location.search);
-  const tab = params.get("tab") || "Presentations";
-  openPage(null, tab);
-};
-
-</script>
 
 <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
@@ -147,22 +24,6 @@ window.onload = function() {
    })();
 </script>
 
-  <script>
-    console.log("Hello, I am loading!")
-    document.addEventListener('DOMContentLoaded', loadSchedule);
-  </script>
-
-
-  <script>
-window.addEventListener("DOMContentLoaded", () => {
-  const stored = localStorage.getItem("currentUser");
-  if (stored) {
-    currentUser = stored;
-    document.getElementById("login-status").textContent = `Logged in as ${currentUser}`;
-    document.getElementById("username").value = stored;
-  }
-});
-  </script>
 
 <div id="login-bar" style="padding: 10px; background: #eef; display: flex; gap: 10px; align-items: center;">
   <label for="username">Username:</label>
@@ -170,25 +31,7 @@ window.addEventListener("DOMContentLoaded", () => {
   <button onclick="loginUser()">Login</button>
   <span id="login-status" style="margin-left: 10px; font-weight: bold;"></span>
 </div>
-
-<script>
-  window.currentUser = null;
-
-function loginUser() {
-  const input = document.getElementById("username");
-  const name = input.value.trim();
-
-  if (!name) {
-    alert("Please enter your name.");
-    return;
-  }
-
-  window.currentUser = name;
-  localStorage.setItem("currentUser", name);
-  document.getElementById("login-status").textContent = `Logged in as ${window.currentUser}`;
-  // document.getElementById("username").disabled = true;
-}
-</script>
+<script src="./js/currentUser.js"></script>
 
     <h1> Travelers Group </h1>
 
@@ -198,6 +41,7 @@ function loginUser() {
   <button class="tablinks" onclick="openPage(event, 'Presentations')">Presentations</button>
   <button class="tablinks" onclick="openPage(event, 'Chat')">Chat</button>
 </div>
+<script src="./js/tabs.js"></script>
 
 <div id="Presentations" class="tabcontent" style="display: block;">
 
@@ -391,74 +235,7 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 </textarea>
 <div id="chat-box"/>
 
-<script>
-    const supabaseUrl = 'https://ooqcydaootqkowkhxhil.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9vcWN5ZGFvb3Rxa293a2h4aGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIwNjI2OTMsImV4cCI6MjA2NzYzODY5M30.NWS0b0alWEj9KAHpHyrcfyQ-2bri571atC0IEVBNeHI';
-    const client_chat = window.supabase.createClient(supabaseUrl, supabaseKey);
-
-async function sendMessage() {
-  const author = window.currentUser;
-  const content = document.getElementById("chat_text").value.trim();
-
-  if (!author || !content) return;
-
-  to_insert =     {
-      author: author,
-      content: content,
-      time: new Date().toLocaleTimeString([], {
-        hour: '2-digit',
-        minute: '2-digit',
-        hour12: false
-      })
-    }
-  console.log("inserting ", to_insert)
-
-  await client_chat.from("messages").insert([to_insert]);
-
-  document.getElementById("chat_text").value = "";
-  await loadChatMessages(); // refresh after send
-}
-
-async function loadChatMessages() {
-  // console.log("Loading chat messages")
-  const { data, error } = await client_chat
-    .from("messages")
-    .select("*")
-    .order("time", { ascending: false });
-
-  if (error) {
-    console.error("Failed to load messages:", error);
-    return;
-  }
-
-  const chatBox = document.getElementById("chat-box");
-  const html = data.map(msg => {
-    // console.log(msg)
-    return(`<div><strong>${msg.author}</strong>:<small>${msg.time}</small><br>&nbsp;&nbsp;&nbsp; ${msg.content}</div>`)
-  }
-  ).join("");
-  chatBox.innerHTML = html
-
-
-  // auto-scroll to bottom
-  chatBox.scrollTop = chatBox.scrollHeight;
-}
-
-// auto-refresh every 50 seconds
-setInterval(loadChatMessages, 5000);
-document.addEventListener("DOMContentLoaded", loadChatMessages);
-
-document.getElementById("chat_text").addEventListener("keydown", function (event) {
-  if (event.key === "Enter" && !event.shiftKey) {
-    event.preventDefault(); // prevent new line
-    sendMessage();          // your function
-  }
-});
-
-</script>
-
-
-
+<script src="./js/chat.js"></script>
 
 </div>
 
